<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation = "vertical"
    tools:context="com.senbonzakura.marin.datospersonalesform.SecondActivity"
    android:background = "@color/black1"
    android:weightSum="1">

    <TextView android:text="@string/string8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white1"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:text="@string/string9"
        android:textColor="@color/white1"
        />

    <EditText
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:id="@+id/edt2"
        android:background="@color/white1"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:text="@string/string10"
        android:textColor="@color/white1"
        />
    <EditText
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:id="@+id/edt3"
        android:background="@color/white1"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:text="@string/string11"
        android:textColor="@color/white1"
        />
    <EditText
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:id="@+id/edt4"
        android:layout_marginBottom="36dp"
        android:background="@color/white1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.21"
        android:text="@string/string12"/>
</LinearLayout>
