<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation = "vertical"
    android:background="@color/black1"
    android:weightSum="1">

    <TextView android:text="@string/string1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textColor="@color/white1"/>
    <TextView android:text="@string/string2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/white1"/>
    <EditText
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:id="@+id/edt1"
        android:background="@color/white1"/>
    <TextView android:text="@string/string3"
            android:layout_height="24dp"
            android:layout_width="fill_parent"
            android:textColor="@color/white1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="148dp">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker2"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text ="@string/string4"
        android:textColor="@color/white1"
        />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"



        >
<RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        <RadioButton

            android:textSize="24sp"
            android:textColor="@color/white1"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:text="@string/string5"
            android:id="@+id/radioButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:onClick="onRadioButtonClicked"
           />

        <RadioButton


            android:textSize="24sp"
            android:textColor="@color/white1"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:text="@string/string6"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/radioButton"
            android:layout_alignParentStart="true"
            android:onClick="onRadioButtonClicked"/>
</RadioGroup>
        <Button


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string7"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black1"
            android:background="@color/orange1" />
    </RelativeLayout>
</LinearLayout>
